--- a/resources/sass/product/action.scss
+++ b/resources/sass/product/action.scss
@@ -54,3 +54,20 @@
 .img{
     width: 100px;
 }
+.image{
+    width: 200px;
+    padding: 20px;
+}
+.images{
+    width: 200px;
+    padding: 20px;
+}
+.row{
+    margin-top: 20px; 
+}
+.name-date{
+    padding: 0px;
+    p{
+        margin-left: 30px; 
+    }
+}
