--- a/resources/sass/home/home.scss
+++ b/resources/sass/home/home.scss
@@ -24,6 +24,7 @@
             cursor: pointer;
             .img{
                 position: relative;
+                width: 100%;
                 img{
                     width: 100%;
                     border-radius: 100%; 
