--- a/resources/sass/product/index.scss
+++ b/resources/sass/product/index.scss
@@ -65,6 +65,7 @@
                 background: white;
                 cursor: pointer;
                 .img {
+                  width: 100%;
                   img {
                     width: 100%;
                     height: 188px;
